# system

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  PRD.md  README.md  compose.env.example  deny.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependency-review.yml  deploy-readiness-validation-manual.yml  k8s-manifest-validation-manual.yml  ops-tooling-smoke-manual.yml  perf-evidence-manual.yml  production-deploy-manual.yml  production-promotion-manual.yml  release-image.yml  replay-audit-compliance-manual.yml  workflow-governance.yml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  migration-job.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.template.yaml  service.yaml
docs/: deployment-production-checklist.md  inhouse-faang-auth-roadmap.md  jwt-key-rotation-runbook.md  observability-auth-refresh.md  pake-passkey-api-spec.md  pake-passkey-migration-plan.md  pake-passkey-prd.md  pake-passkey-rollout-and-operations.md  pake-passkey-schema-and-ports.md  runtime-assumptions.md
docs/alertmanager/: auth-routing-example.yaml
docs/alerts/: auth-refresh-alert-rules.yaml
docs/grafana/: auth-refresh-runtime-prometheus.json  auth-refresh-security-dashboard.json
docs/performance/: auth-load-soak.md
docs/prometheus/: prometheus-auth-example.yaml
migrations/: 0001_init_auth_core.sql  0002_add_credentials.sql  0003_guard_credentials_coverage.sql  0004_add_verification_tokens.sql  0005_add_password_reset_tokens.sql  0006_add_mfa_tables.sql  0007_add_mfa_challenge_failed_attempts.sql  0008_add_audit_observability_indexes.sql  0009_add_email_outbox.sql  0010_add_outbox_processing_lease.sql  0011_add_outbox_replay_audit.sql  0012_add_outbox_replay_change_ticket.sql  0013_harden_outbox_replay_apply_audit_constraints.sql  0014_enforce_outbox_replay_audit_append_only.sql  0015_allow_outbox_replay_audit_controlled_maintenance_override.sql  0016_require_outbox_replay_audit_maintenance_role.sql  0017_add_passkey_credentials.sql  0018_add_passkey_challenges.sql  0019_add_auth_v2_foundation.sql  0020_add_auth_flow_targeting_fields.sql
scripts/: generate-k8s-jwt-key-secret.sh  generate-k8s-secret-manifest.sh  generate-production-overlay.sh  normalize-auth-v2-cohorts.sh  outbox-dead-letter-report.sh  outbox-dead-letter-tool.sh  outbox-replay-audit-compliance-tool.sh  test-auth-v2-dr-chaos.sh  test-ops-tooling-smoke.sh  test-postgres-local.sh  validate-deploy-readiness.sh  validate-k8s-manifests.sh  validate-observability-artifacts.sh
scripts/perf/: auth-load-soak.js  (+2 more)
src/: config.rs  health.rs  jwks.rs  main.rs  observability.rs
(+33 files in other folders)
