[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
base32 = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
hmac = "0.12"
ipnet = "2"
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
redis = { version = "0.27", features = ["tokio-comp"] }
prometheus = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
